Questions/answers are working. Started a simple web interface.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AuctionPI</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>AuctionPI  - Home</title>
 </head>
 <body>
-    <h1>Welcome to the start page of the AuctionPI</h1>
+    <h2>Welcome to the start page of the AuctionPI interface</h2>
+    <br/>
+    <h3>Here you can choose what entity you want to work with next:</h3>
+  
+    <ul>
+        <li><a href="users.html">Users</a></li>
+        <li><a href="media.html">Media</a></li>
+    </ul>
 </body>
 </html>
 
